@@ -6,6 +6,7 @@ import com.example.culinaryblogapi.dto.RecipeDtoForHome;
 import com.example.culinaryblogapi.model.Category;
 import com.example.culinaryblogapi.model.Ingredient;
 import com.example.culinaryblogapi.model.Recipe;
+import com.example.culinaryblogapi.model.RecipeForId;
 import com.example.culinaryblogapi.requestBody.RecipeByTitleAndCategoryIdRequest;
 import com.example.culinaryblogapi.service.*;
 import lombok.RequiredArgsConstructor;
@@ -14,10 +15,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.io.File;
 import java.io.FileInputStream;
@@ -62,43 +60,36 @@ public class HomeController {
         return ResponseEntity.ok(categoryDtos);
     }
 
-    @GetMapping(value="/recipes", produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
+    @GetMapping("/recipe")
+    public ResponseEntity<RecipeDtoForHome> getRecipeById (@RequestBody RecipeForId recipeForId) throws IOException {
+        Recipe recipe = recipeService.findRecipeById(recipeForId.getRecipeId()).orElseThrow();
+        return ResponseEntity.ok(convertToDto(recipe));
+    }
+
+    @PostMapping(value="/recipes", produces = MediaType.APPLICATION_JSON_VALUE, consumes = MediaType.APPLICATION_JSON_VALUE)
     public ResponseEntity<List<RecipeDtoForHome>> getAllRecipes (
             @RequestBody RecipeByTitleAndCategoryIdRequest recipeByTitleAndCategoryIdRequest
     )  throws IOException {
+        List<Recipe> recipes;
+        List<RecipeDtoForHome> recipeDtoForHome;
         if(recipeByTitleAndCategoryIdRequest.getTitle() == null){
-            List<Recipe> recipes = recipeService.getAllByCategoryId(recipeByTitleAndCategoryIdRequest.getCategoryId());
-            List<RecipeDtoForHome> recipeDtoForHome = recipes.stream()
-                    .map( n -> {
-                        try {
-                            return convertToDto(n);
-                        } catch (IOException e) {
-                            e.printStackTrace();
-
-                        }
-                        return null;
-                    })
-                    .filter(n -> n.getIsVisible() == 1)
-                    .toList();
-            return ResponseEntity.ok(recipeDtoForHome);
+            recipes = recipeService.getAllByCategoryId(recipeByTitleAndCategoryIdRequest.getCategoryId());
         } else {
-            List<Recipe> recipes = recipeService.getAllByCategoryId(recipeByTitleAndCategoryIdRequest.getCategoryId());
-            List<RecipeDtoForHome> recipeDtoForHome = recipes.stream()
-                    .map( n -> {
-                        try {
-                            return convertToDto(n);
-                        } catch (IOException e) {
-                            e.printStackTrace();
-
-                        }
-                        return null;
-                    })
-                    .filter(n -> n.getIsVisible() == 1)
-                    .toList();
-            return ResponseEntity.ok(recipeDtoForHome);
+            recipes = recipeService.findAllByTitleContainingIgnoreCaseAndCategoryId(recipeByTitleAndCategoryIdRequest.getTitle(), recipeByTitleAndCategoryIdRequest.getCategoryId());
         }
-//
-//        return ResponseEntity.ok(convertRecipeToDTO(recipes.stream().filter(r -> r.getIsVisible() == 1).collect(Collectors.toList())));
+        recipeDtoForHome = recipes.stream()
+                .map( n -> {
+                    try {
+                        return convertToDto(n);
+                    } catch (IOException e) {
+                        e.printStackTrace();
+
+                    }
+                    return null;
+                })
+                .filter(n -> n.getIsVisible() == 1)
+                .toList();
+        return ResponseEntity.ok(recipeDtoForHome);
     }
 
 
@@ -112,7 +103,9 @@ public class HomeController {
         RecipeDtoForHome recipeDtoForHome = modelMapper.map(recipe, RecipeDtoForHome.class);
         List<IngredientDtoForHome> ingredientDtoForHomes = new ArrayList<>();
 
-        for(Ingredient i : recipe.getIngredients()) {
+        List<Ingredient> ingredients = ingredientService.findAllByRecipe(recipe);
+
+        for(Ingredient i : ingredients) {
             IngredientDtoForHome ingredientDtoForHome = new IngredientDtoForHome();
             ingredientDtoForHome.setProductName(i.getProduct().getName());
             ingredientDtoForHome.setUnitName(i.getUnit().getName());
@@ -126,7 +119,7 @@ public class HomeController {
         String absolutePath = fileTmp.getAbsolutePath();
 
         String base64Image;
-        if (!recipe.getPathToImage().isEmpty()) {
+        if (recipe.getPathToImage() != null && !recipe.getPathToImage().isEmpty()) {
             File file = new File(absolutePath + "/" + recipe.getPathToImage());
             FileInputStream fileInputStream = new FileInputStream(file);
             byte[] bytes = new byte[(int) file.length()];
